--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.8.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
