--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "^1.8.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
